update CSS, login form alignment fix

--- a/src/index.css
+++ b/src/index.css
@@ -11,15 +11,16 @@ body {
 .login_container {
     display: flex;
     position: relative;
-    height: 100vh;
+    height: 50vh;
     width: 100%;
     align-items: center;
     justify-content: center;
 }
 
 .login_form {
-    height: 50%;
-    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .login_container input {
